--- a/pages/home.html
+++ b/pages/home.html
@@ -3,11 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+
+    <!-- LINKING GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Varta:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+    <title>What do you want to watch?</title>
+
+    <!-- LINKING STYLESHEETS -->
     <link rel="stylesheet" href="../styles/style.css" />
     <link rel="stylesheet" href="../styles/header.css" />
     <link rel="stylesheet" href="../styles/footer.css" />
     <link rel="stylesheet" href="../styles/tvShowTemplate.css" />
+
+    <!-- LINKING JS FILE -->
     <script type="module" src="../main.js"></script>
   </head>
   <body>
