added randomizer, fixed if image is not found.

--- a/pages/randomizer.html
+++ b/pages/randomizer.html
@@ -17,6 +17,10 @@
     <link rel="stylesheet" href="../styles/footer.css" />
     <link rel="stylesheet" href="../styles/style.css" />
     <link rel="stylesheet" href="../styles/tvShowTemplate.css" />
+
+    <!-- LINKING JS FILE -->
+    <script type="module" src="../scripts/randomizer.js"></script>
+
     <title>Document</title>
   </head>
   <body>
@@ -54,6 +58,11 @@
       </nav>
     </header>
     <!-- NAV BAR END -->
+    <section class="randomizer-container">
+      <h1>What to watch?</h1>
+      <div id="random-show-card"></div>
+      <button id="randomizer-btn">Get random tv-show</button>
+    </section>
     <footer>footer</footer>
   </body>
 </html>
