--- a/pages/search.html
+++ b/pages/search.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="shortcut icon" href="/media/logo.png" type="image/x-icon">
 
     <!-- LINKING GOOGLE FONTS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Varta:wght@300..700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Varta:wght@300..700&display=swap" rel="stylesheet"/>
 
     <!-- LINKING STYLESHEETS -->
-    <link rel="stylesheet" href="../styles/header.css" />
-    <link rel="stylesheet" href="../styles/footer.css" />
-    <link rel="stylesheet" href="../styles/style.css" />
-    <link rel="stylesheet" href="../styles/tvShowTemplate.css" />
-    <link rel="stylesheet" href="../styles/search.css" />
+    <link rel="stylesheet" href="../styles/header.css"/>
+    <link rel="stylesheet" href="../styles/footer.css"/>
+    <link rel="stylesheet" href="../styles/style.css"/>
+    <link rel="stylesheet" href="../styles/tvShowTemplate.css"/>
+    <link rel="stylesheet" href="../styles/search.css"/>
     <script type="module" src="../scripts/search.js"></script>
 
-    <title>Document</title>
+    <title>What To Watch:Search</title>
   </head>
   <body>
     <!-- HEADER -->
     <header class="header">
-      <img class="logo-img" src="../media/logo.png" alt="" />
+      <img class="logo-img" src="../media/logo.png" alt=""/>
       <div>
         <p class="mobile-header-text">What to watch?</p>
       </div>
@@ -34,30 +32,22 @@
       <nav class="nav-bar-container">
         <ul class="nav-bar">
           <li class="nav-item">
-            <img class="icon-img" src="../media/house-icon.png" alt="" />
-            <p class="nav-item-text">
-              <a class="page-link" href="../pages/home.html">Home</a>
-            </p>
+            <img class="icon-img" src="../media/house-icon.png" alt=""/>
+            <a class="page-link nav-item-text" href="../pages/home.html">Home</a>
           </li>
           <li class="nav-item">
-            <img class="icon-img" src="../media/search-icon.png" alt="" />
-            <p class="nav-item-text">
-              <a class="page-link" href="../pages/search.html">Search</a>
-            </p>
+            <img class="icon-img" src="../media/search-icon.png" alt=""/>
+            <a class="page-link nav-item-text" href="../pages/search.html">Search</a>
           </li>
           <li class="nav-item">
-            <img class="icon-img" src="../media/random-icon.png" alt="" />
-            <p class="nav-item-text">
-              <a class="page-link" href="../pages/randomizer.html"
-                >Randomizer</a
-              >
-            </p>
+            <img class="icon-img" src="../media/random-icon.png" alt=""/>
+            <a class="page-link nav-item-text" href="../pages/randomizer.html">Randomizer</a>
           </li>
         </ul>
       </nav>
     </header>
       <div class="search-container">
-        <input type="text" id="search-input" placeholder="Search TV Shows...">
+        <input type="text" id="search-input" autocomplete="off" spellcheck="false" placeholder="Search TV Shows...">
       </div>
       <div id="search-results" class="tv-shows-list"></div>
     <!-- NAV BAR END -->
