--- a/pages/search.html
+++ b/pages/search.html
@@ -32,26 +32,33 @@
       <nav class="nav-bar-container">
         <ul class="nav-bar">
           <li class="nav-item">
-            <img class="icon-img" src="../media/house-icon.png" alt=""/>
+            <a href="../pages/home.html">
+              <img class="icon-img" src="../media/house-icon.png" alt="Home"/>
+            </a>
             <a class="page-link nav-item-text" href="../pages/home.html">Home</a>
           </li>
           <li class="nav-item">
-            <img class="icon-img" src="../media/search-icon.png" alt=""/>
+            <a href="../pages/search.html">
+              <img class="icon-img" src="../media/search-icon.png" alt="Search"/>
+            </a>
             <a class="page-link nav-item-text" href="../pages/search.html">Search</a>
           </li>
           <li class="nav-item">
-            <img class="icon-img" src="../media/random-icon.png" alt=""/>
+            <a href="../pages/randomizer.html">
+              <img class="icon-img" src="../media/random-icon.png" alt="Randomizer"/>
+            </a>
             <a class="page-link nav-item-text" href="../pages/randomizer.html">Randomizer</a>
           </li>
         </ul>
       </nav>
+      <!-- NAV BAR END -->
     </header>
+    <main>
       <div class="search-container">
         <input type="text" id="search-input" autocomplete="off" spellcheck="false" placeholder="Search TV Shows...">
       </div>
       <div id="search-results" class="tv-shows-list"></div>
-    <!-- NAV BAR END -->
-
+    </main>
     <footer>footer</footer>
   </body>
 </html>
