fixed som styling, added fonts to cards and added margin to logo

--- a/pages/randomizer.html
+++ b/pages/randomizer.html
@@ -59,7 +59,7 @@
     </header>
     <!-- NAV BAR END -->
     <section class="randomizer-container">
-      <h1>What to watch?</h1>
+      <h1>What to watch <span class="yellow-color">?</span></h1>
       <div id="random-show-card"></div>
       <button id="randomizer-btn">Get random tv-show</button>
     </section>
