logo linked to homepage

--- a/pages/home.html
+++ b/pages/home.html
@@ -25,7 +25,7 @@
     <!-- HEADER -->
     <header class="header">
       <a href="../pages/home.html">
-        <img class="logo-img" src="../media/logo.png" alt=""/>
+        <img class="logo-img" src="../media/logo.png" alt="WTW Logo"/>
       </a>
       <div>
         <p class="mobile-header-text">What to watch?</p>
