--- a/pages/randomizer.html
+++ b/pages/randomizer.html
@@ -63,6 +63,56 @@
       <div id="random-show-card"></div>
       <button id="randomizer-btn">Get random tv-show</button>
     </section>
-    <footer>footer</footer>
+    <footer>
+      <nav class="nav-bar-container-footer">
+        <ul class="nav-bar-footer">
+          <li class="nav-item-footer">
+            <a href="../pages/home.html">
+              <img
+                class="icon-img-footer"
+                src="../media/house-icon.png"
+                alt="Home"
+              />
+            </a>
+            <a class="page-link nav-item-text-footer" href="../pages/home.html"
+              >Home</a
+            >
+          </li>
+          <li class="nav-item-footer">
+            <a href="../pages/search.html">
+              <img
+                class="icon-img-footer"
+                src="../media/search-icon.png"
+                alt="Search"
+              />
+            </a>
+            <a
+              class="page-link nav-item-text-footer"
+              href="../pages/search.html"
+              >Search</a
+            >
+          </li>
+          <li class="nav-item-footer">
+            <a href="../pages/randomizer.html">
+              <img
+                class="icon-img-footer"
+                src="../media/random-icon.png"
+                alt="Randomizer"
+              />
+            </a>
+            <a
+              class="page-link nav-item-text-footer"
+              href="../pages/randomizer.html"
+              >Randomizer</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <p class="made-by-text">
+        <img class="footer-icon" src="../media/handshake.png" alt="" />
+        Made by <a href="https://github.com/robertkoder">Robert</a> and
+        <a href="https://github.com/EmilieB10">Emilie</a>
+      </p>
+    </footer>
   </body>
 </html>
