--- a/pages/randomizer.html
+++ b/pages/randomizer.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../styles/header.css" />
     <link rel="stylesheet" href="../styles/footer.css" />
     <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="../styles/randomizer.css" />
     <link rel="stylesheet" href="../styles/tvShowTemplate.css" />
 
     <!-- LINKING JS FILE -->
