added index file and fixed paths

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- HEADER -->
     <header class="header">
       <a href="../pages/home.html">
-        <img class="logo-img" src="../media/logo.png" alt="WTW Logo"/>
+        <img class="logo-img" src="../media/logo.png" alt="WTW Logo" />
       </a>
       <div>
         <p class="mobile-header-text">What to watch?</p>
@@ -41,9 +41,7 @@
             <a href="../pages/home.html">
               <img class="icon-img" src="../media/house-icon.png" alt="Home" />
             </a>
-            <a class="page-link nav-item-text" href="../pages/home.html"
-              >Home</a
-            >
+            <a class="page-link nav-item-text" href="../index.html">Home</a>
           </li>
           <li class="nav-item">
             <a href="../pages/search.html">
@@ -99,7 +97,7 @@
                 alt="Home"
               />
             </a>
-            <a class="page-link nav-item-text-footer" href="../pages/home.html"
+            <a class="page-link nav-item-text-footer" href="./index.html"
               >Home</a
             >
           </li>
