--- a/pages/randomizer.html
+++ b/pages/randomizer.html
@@ -38,7 +38,7 @@
           <li class="nav-item">
             <img class="icon-img" src="../media/house-icon.png" alt="" />
             <p class="nav-item-text">
-              <a class="page-link" href="../pages/home.html">Home</a>
+              <a class="page-link" href="../index.html">Home</a>
             </p>
           </li>
           <li class="nav-item">
@@ -75,7 +75,7 @@
                 alt="Home"
               />
             </a>
-            <a class="page-link nav-item-text-footer" href="../pages/home.html"
+            <a class="page-link nav-item-text-footer" href="../index.html"
               >Home</a
             >
           </li>
