--- a/pages/search.html
+++ b/pages/search.html
@@ -40,9 +40,7 @@
             <a href="../pages/home.html">
               <img class="icon-img" src="../media/house-icon.png" alt="Home" />
             </a>
-            <a class="page-link nav-item-text" href="../pages/home.html"
-              >Home</a
-            >
+            <a class="page-link nav-item-text" href="../index.html">Home</a>
           </li>
           <li class="nav-item">
             <a href="../pages/search.html">
@@ -95,7 +93,7 @@
                 alt="Home"
               />
             </a>
-            <a class="page-link nav-item-text-footer" href="../pages/home.html"
+            <a class="page-link nav-item-text-footer" href="../index.html"
               >Home</a
             >
           </li>
