shorten summary, fix margin

--- a/pages/search.html
+++ b/pages/search.html
@@ -73,14 +73,16 @@
       <!-- NAV BAR END -->
     </header>
     <main>
-      <div class="search-container">
-        <input
-          type="text"
-          id="search-input"
-          autocomplete="off"
-          spellcheck="false"
-          placeholder="Search TV Shows..."
-        />
+      <section>
+        <div class="search-container">
+          <input
+            type="text"
+            id="search-input"
+            autocomplete="off"
+            spellcheck="false"
+            placeholder="Search TV Shows..."
+          />
+        </section>
       </div>
       <div id="search-results" class="tv-shows-list"></div>
     </main>
