image css and home link updates

--- a/pages/randomizer.html
+++ b/pages/randomizer.html
@@ -68,7 +68,7 @@
       <nav class="nav-bar-container-footer">
         <ul class="nav-bar-footer">
           <li class="nav-item-footer">
-            <a href="../pages/home.html">
+            <a href="../index.html">
               <img
                 class="icon-img-footer"
                 src="../media/house-icon.png"
