--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <!-- HEADER -->
     <header class="header">
-      <a href="../pages/home.html">
+      <a href="../index.html">
         <img class="logo-img" src="../media/logo.png" alt="WTW Logo" />
       </a>
       <div>
@@ -38,7 +38,7 @@
       <nav class="nav-bar-container">
         <ul class="nav-bar">
           <li class="nav-item">
-            <a href="../pages/home.html">
+            <a href="../index.html">
               <img class="icon-img" src="../media/house-icon.png" alt="Home" />
             </a>
             <a class="page-link nav-item-text" href="../index.html">Home</a>
@@ -90,7 +90,7 @@
       <nav class="nav-bar-container-footer">
         <ul class="nav-bar-footer">
           <li class="nav-item-footer">
-            <a href="../pages/home.html">
+            <a href="../index.html">
               <img
                 class="icon-img-footer"
                 src="../media/house-icon.png"
