--- a/pages/home.html
+++ b/pages/home.html
@@ -12,22 +12,23 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Varta:wght@300..700&display=swap"
       rel="stylesheet"
     />
+    <title>What do you want to watch?</title>
 
     <!-- LINKING STYLESHEETS -->
+    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="../styles/home.css" />
     <link rel="stylesheet" href="../styles/header.css" />
     <link rel="stylesheet" href="../styles/footer.css" />
-    <link rel="stylesheet" href="../styles/style.css" />
     <link rel="stylesheet" href="../styles/tvShowTemplate.css" />
-    <link rel="stylesheet" href="../styles/search.css" />
-    <script type="module" src="../scripts/search.js"></script>
 
-    <title>What To Watch:Search</title>
+    <!-- LINKING JS FILE -->
+    <script type="module" src="../scripts/home.js"></script>
   </head>
   <body>
     <!-- HEADER -->
     <header class="header">
       <a href="../index.html">
-        <img class="logo-img" src="../media/logo.png" alt="WTW Logo" />
+        <img class="logo-img" src="../media/logo.png" alt="WTW Logo"/>
       </a>
       <div>
         <p class="mobile-header-text">What to watch?</p>
@@ -40,7 +41,9 @@
             <a href="../index.html">
               <img class="icon-img" src="../media/house-icon.png" alt="Home" />
             </a>
-            <a class="page-link nav-item-text" href="../index.html">Home</a>
+            <a class="page-link nav-item-text" href="../index.html"
+              >Home</a
+            >
           </li>
           <li class="nav-item">
             <a href="../pages/search.html">
@@ -70,19 +73,20 @@
       </nav>
       <!-- NAV BAR END -->
     </header>
+
     <main>
-      <section>
-        <div class="search-container">
-          <input
-            type="text"
-            id="search-input"
-            autocomplete="off"
-            spellcheck="false"
-            placeholder="Search TV Shows..."
+      <div class="home-content-container">
+        <a href="../pages/randomizer.html">
+          <img
+            class="landing-page-img"
+            src="../media/header.png"
+            alt="Randomizer Header"
           />
-        </section>
+        </a>
       </div>
-      <div id="search-results" class="tv-shows-list"></div>
+      <section>
+        <div id="top-rated-tv-shows" class="tv-shows-list"></div>
+      </section>
     </main>
     <footer>
       <nav class="nav-bar-container-footer">
