--- a/pages/randomizer.html
+++ b/pages/randomizer.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="../styles/header.css" />
     <link rel="stylesheet" href="../styles/footer.css" />
     <link rel="stylesheet" href="../styles/style.css" />
-    <link rel="stylesheet" href="../styles/randomizer.css" />
     <link rel="stylesheet" href="../styles/tvShowTemplate.css" />
+    <link rel="stylesheet" href="../styles/randomizer.css" />
 
     <!-- LINKING JS FILE -->
     <script type="module" src="../scripts/randomizer.js"></script>
@@ -27,7 +27,9 @@
   <body>
     <!-- HEADER -->
     <header class="header">
-      <img class="logo-img" src="../media/logo.png" alt="" />
+      <a href="../index.html">
+        <img class="logo-img" src="../media/logo.png" alt="WTW Logo" />
+      </a>
       <div>
         <p class="mobile-header-text">What to watch?</p>
       </div>
