--- a/pages/randomizer.html
+++ b/pages/randomizer.html
@@ -22,7 +22,7 @@
     <!-- LINKING JS FILE -->
     <script type="module" src="../scripts/randomizer.js"></script>
 
-    <title>Document</title>
+    <title>WTW: Randomizer</title>
   </head>
   <body>
     <!-- HEADER -->
