--- a/pages/search.html
+++ b/pages/search.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="../styles/search.css" />
     <script type="module" src="../scripts/search.js"></script>
 
-    <title>What To Watch:Search</title>
+    <title>WTW: Search</title>
   </head>
   <body>
     <!-- HEADER -->
